Added branch merging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,6 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(OpenSSL REQUIRED)
 find_package(ZLIB REQUIRED)
 
-
-include_directories(${OPENSSL_ROOT_DIR}/include)
-
 add_executable(Jit main.cpp
         DirectoryManagent/DirManager.cpp
         DirectoryManagent/DirManager.h
@@ -22,6 +19,7 @@ add_executable(Jit main.cpp
         ChangesManagement/JitActions.h
         JitUtility/jit_utility.h
         JitUtility/jit_utility.cpp
+        ChangesManagement/JitActionsBranchMerge.cpp
 )
 
-target_link_libraries(Jit OpenSSL::SSL OpenSSL::Crypto ZLIB::ZLIB)
+target_link_libraries(Jit OpenSSL::SSL OpenSSL::Crypto ZLIB::ZLIB pthread)
